Use `Stream#flatMap` instead of `Stream#mapMulti`
The latter involves an allocating lambda internally